# JetpackJoyride

./: CMakeLists.txt  README.md
include/: Animation.h  AudioManager.h  Board.cpp  Board.h  CMakeLists.txt  Controller.h  EventsQueue.h  Exeption.h  Help.h  PlayGame.h  ResourcesManager.h  ScoreBoard.h  Setting.h  Shop.h  Values.h
include/Events/: Event.h  EventsQueue.h
include/Managers/: AudioManager.h  Exeption.h  GameManager.h  PlayerStateManager.h  ResourcesManager.h  Values.h
include/Menu/: Help.h  Setting.h  Settings.h  Shop.h
include/Objects/: Beam.h  Bound.h  CMakeLists.txt  Coin.h  Coins.cpp  Coins.h  CollisionListener.h  Flame.h  Floor.h  Laser.h  Lights.h  Missile.h  NonCollisionObject.h  Object.h  Obstacle.h  PairedObject.h  Piggy.h  Player.h  Scientist.h  SuperPower.h  TempObj.h  TempPlayer.h
include/Objects/Box2Objects/: Bound.h  Box2Coin.h  Box2Object.h  Coin.h  CollisionListener.h  Player.h
include/Objects/Box2dObjects/: Bound.h  Box2dObject.h  CMakeLists.txt  CollisionListener.h  FallingCoins.h  Player.h
include/PlayGame/: Animation.h  Board.h  CMakeLists.txt  GameSettings.h  PlayGame.h  ScoreBoard.h
include/Setting/: AudioManager.h  Setting.h
resources/: CMakeLists.txt
resources/Berry/: CMakeLists.txt
resources/Files/: GameManager.txt  mapNum0.txt  mapNum1.txt  mapNum10.txt  mapNum2.txt  mapNum3.txt  mapNum4.txt  mapNum5.txt  mapNum6.txt  mapNum7.txt  mapNum8.txt  mapNum9.txt
src/: Animation.cpp  Animation.h  AudioManager.cpp  Board.cpp  CMakeLists.txt  Controller.cpp  Event.cpp  Help.cpp  PlayGame.cpp  ResourcesManager.cpp  ScoreBoard.cpp  Setting.cpp  Shop.cpp  main.cpp
src/Events/: Event.cpp  EventsQueue.cpp
src/Managers/: AudioManager.cpp  GameManager.cpp  PlayerStateManager.cpp  ResourcesManager.cpp
src/Menu/: Help.cpp  Setting.cpp  Settings.cpp  Shop.cpp
src/Objects/: Beam.cpp  Bound.cpp  CMakeLists.txt  Coins.cpp  CollisionListener.cpp  Flame.cpp  Floor.cpp  Laser.cpp  Lights.cpp  Missile.cpp  NonCollisionObject.cpp  Object.cpp  Obstacle.cpp  PairedObject.cpp  Piggy.cpp  Player.cpp  Scientist.cpp  SuperPower.cpp  TempObj.cpp  TempPlayer.cpp
src/Objects/Box2Objects/: Bound.cpp  Box2Coin.cpp  Box2Object.cpp  Coin.cpp  CollisionListener.cpp  Player.cpp
src/Objects/Box2dObjects/: Bound.cpp  Box2Object.cpp  CollisionListener.cpp  FallingCoins.cpp  Player.cpp
src/PlayGame/: Animation.cpp  Board.cpp  CMakeLists.txt  GameSettings.cpp  PlayGame.cpp  ScoreBoard.cpp
src/Setting/: AudioManager.cpp  Setting.cpp
