
configure_file ("Title.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("Player.png" ${CMAKE_BINARY_DIR} COPYONLY)

configure_file ("PlayGameButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("SettingButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("ShopButton.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("HelpButton.png" ${CMAKE_BINARY_DIR} COPYONLY)

add_subdirectory(Berry)